# my_work

./: README.md  rviz_project.txt
basics/: package.xml
basics/srcripts/: path_make.py  topic_publisher.py
can_driver_rx/: CMakeLists.txt  package.xml
can_driver_rx/include/can_driver/: can_driver_node.h
can_driver_rx/src/: can_driver_node.cpp
chapter4_tutorials/: my.rviz
chapter4_tutorials/robot1_description/: CMakeLists.txt  urdf.rviz
chapter4_tutorials/robot1_description/launch/: state_xacro2.launch
chapter4_tutorials/robot1_description/src/: state_publisher.cpp
chapter4_tutorials/robot1_gazebo/launch/: gazebo.launch
json_client/: CMakeLists.txt  package.xml
json_client/src/: json_client.cpp
just_cpp/file_tcp/: readme.txt
just_cpp/file_tcp (copy)/client_folder/: client  client.cpp  tcp_client.h
just_cpp/file_tcp (copy)/server_folder/: server
just_cpp/file_tcp/client_folder/: client  client.cpp  client_tx_data.h  sample.json  tcp_client.h
just_cpp/file_tcp/server_folder/: server  server.cpp
just_cpp/json_pkg/: json_node  json_node.cpp  sample.json
just_cpp/safe_zone/: safe_zone  safe_zone.cpp
just_cpp/serial/: serial  serial.cpp  serial2  serial2.cpp
just_cpp/server/: server  server.c
just_cpp/server2/: server  server.c
messages/TCP_msgs/: CMakeLists.txt  package.xml
messages/TCP_msgs/msg/: TCP_pub.msg
messages/autodrive_msgs/: CMakeLists.txt  package.xml
messages/autodrive_msgs/msg/: AutodriveCmd.msg  AutodriveRpt.msg  CanData.msg  CipvObjectRpt.msg  DiagStatus.msg  EsrNearObjectsRpt.msg  EsrObjectRpt.msg  GnssRpt.msg  GpsMapArray.msg  GpsMapCmd.msg  ObjectArrRpt.msg  ObjectRpt.msg  SpeedCtrlCmdRpt.msg  TrafficSignal.msg  UserCmd.msg  VisualAngle.msg
messages/car_status_msgs/: CMakeLists.txt  README.md  package.xml
messages/car_status_msgs/msg/: car_status_msg.msg
messages/delphi_radar_msgs/: CMakeLists.txt  README.md  package.xml
messages/delphi_radar_msgs/msg/: EsrStatus1.msg  EsrStatus2.msg  EsrStatus3.msg  EsrStatus4.msg  EsrStatus9.msg  EsrTrack.msg  EsrTrackArray.msg  SrrTrack.msg  SrrTrackArray.msg
messages/h_msgs/: CMakeLists.txt  package.xml
messages/h_msgs/msg/: h_command.msg
messages/ilc_msgs/: CMakeLists.txt  README.md  package.xml
messages/ilc_msgs/msg/: Command.msg  Info2hmi.msg  Status.msg
messages/mobileye_msgs/: CMakeLists.txt  README.md  package.xml
messages/mobileye_msgs/msg/: Ahbc.msg  AwsDisplay.msg  Lane.msg  LaneExt.msg  LaneLKA.msg  LaneLkaArray.msg  Obstacle.msg  ObstacleData.msg  ObstacleStatus.msg  ReferencePoints.msg  SignType.msg  TrzPosLane.msg  Tsr.msg  TsrArray.msg
messages/monitor_msgs/: CMakeLists.txt  package.xml
messages/monitor_msgs/msg/: monitor_msg.msg
messages/perception_msgs/: CMakeLists.txt  README.md  package.xml
messages/perception_msgs/msg/: CIPV.msg  CloudCluster.msg  DetectedObject.msg  LCA.msg
messages/pub_msg_pkg/: CMakeLists.txt  package.xml
messages/pub_msg_pkg/msg/: Status.msg
messages/ufo_msgs/: CMakeLists.txt  package.xml
messages/ufo_msgs/msg/: car_status.msg  monitor_commend.msg  ufo_can.msg
messages/vehicle_msgs/: CMakeLists.txt  package.xml
messages/vehicle_msgs/msg/: Control.msg  GUI_ErrCheck.msg  Status.msg
odom_tf/: CMakeLists.txt  package.xml
odom_tf/src/: odom_tf.cpp
safe_zone/: CMakeLists.txt  package.xml
safe_zone/src/: safe_zone.cpp
server_folder/: data0.json  server  server.cpp
stanly_method/: CMakeLists.txt  package.xml
stanly_method/scripts/PathPlanning/CubicSpline/: cubic_spline_planner.py
stanly_method/scripts/PathTracking/stanley_controller/: stanley_controller.py
tcp_client/: CMakeLists.txt  package.xml
tcp_client/include/: client_tx_data.h  tcp_client.h
tcp_client/src/: client.cpp
tcp_client_test/: CMakeLists.txt  package.xml
tcp_client_test/include/: client_tx_data.h  tcp_client.h
tcp_client_test/src/: client.cpp
treeze_tcp/: CMakeLists.txt  package.xml
treeze_tcp/src/: message_gen.cpp  treeze_tcp_client.cpp
uart_driver/: CMakeLists.txt  package.xml
uart_driver/src/: uart_driver_node.py
