<?xml version="1.0"?>
<package>
  <name>autodrive_msgs</name>
  <version>1.0.0</version>
  <description>The autodrive_msgs package</description>
  <maintainer email="joonwooson@gmail.com">Joonwoo Son</maintainer>
  <license>Apache 2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
