<package format="2">
  <name>monitor_msgs</name>
  <version>0.0.1</version>
  <description>monitor</description>

  <maintainer email="ghjo@treeze-eng.com">Gwanghun, Jo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
