<?xml version="1.0"?>
<package>
  <name>perception_msgs</name>
  <version>0.0.1</version>
  <description>The Perception Messages</description>

  <maintainer email="mysna@treeze-eng.com">Chung-Kyeom, Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>
